# github-actions-test

./: CMakeLists.txt  README.md  build.sh  fib.c  fib.h  hello.c
.github/workflows/: cmake.yml  windows.yml
cmake/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  mips64el-linux-gnuabi64.cmake
tests/: Test.cpp
