cmake_minimum_required(VERSION 3.16)

project(hello LANGUAGES C VERSION 1.0)

add_executable(hello hello.c)

include(GNUInstallDirs)
install(TARGETS
    hello
    RUNTIME       DESTINATION   ${CMAKE_INSTALL_BINDIR}
    LIBRARY       DESTINATION   ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE       DESTINATION   ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION   ${CMAKE_INSTALL_INCLUDEDIR}
    )
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_FILE_NAME     "${PROJECT_NAME}-${PROJECT_VERSION}")
set(CPACK_GENERATOR TGZ)
include(CPack)
